# opencpn-wasm

./: .gitignore  README.md
.github/workflows/: deploy.yml
wasm-poc/: CMakeLists.txt
wasm-poc/include/model/: cutil.h
wasm-poc/include/s57/: s57registrar_mgr.h
wasm-poc/src/: chart_bridge.cpp
wasm-poc/src/model/: georef.cpp
wasm-poc/src/s57/: s57registrar_mgr.cpp
wasm-poc/web/: active-nav.js  ais-decoder.js  ais-display.js  app.js  connections.js  feature-info.js  gps.js  grib.js  index.html  instruments.js  kap-parser.js  logbook.js  manifest.json  navigation.js  nmea-parser.js  opencpn_chart.js  opencpn_chart.wasm  renderer.js  s52-styles.js  safety.js  server.js  settings-ui.js  sw.js  symbol-renderer.js  text-renderer.js  tides.js
